[package]
name = "delta-neutral-vault"
version = "0.1.0"
description = "Delta neutral vault for Drift Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "delta_neutral_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
drift = { git = "https://github.com/drift-labs/protocol-v2", tag = "v2.0.0" }
solana-program = "~1.16.0"
bytemuck = "1.13.0"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }