[package]
name = "delta-neutral-vault"
version = "0.1.0"
description = "Delta Neutral Vault Protocol - A sophisticated DeFi vault for maintaining delta-neutral positions on Solana"
authors = ["Delta Neutral Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/delta-neutral-vault/protocol"
keywords = ["solana", "defi", "vault", "delta-neutral", "anchor"]
categories = ["blockchain", "cryptography"]

[lib]
crate-type = ["cdylib", "lib"]
name = "delta_neutral_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
drift = { git = "https://github.com/drift-labs/protocol-v2", branch = "master" }
solana-program = "~1.16.0"
bytemuck = "1.13.0"
num-traits = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros", "full"] }
assert_matches = "1.5"